--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "lint": "vue-cli-service lint",
     "start": "vue-cli-service serve"
   },
+  "engines": {
+    "node": "8.1.2"
+  },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9.8.8",
