--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "vue-cli-service serve"
   },
   "engines": {
-    "node": "6.1.2"
+    "node": "v14.17.3"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
